--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: "Documentation"
 email: r_kumar@acs.org
 description: >- # this means to ignore newlines until "baseurl:"
   Documentation for R&D efforts.
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/gh-pages" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 
