--- a/_data/menus.yaml
+++ b/_data/menus.yaml
@@ -1,30 +1,19 @@
-# Product - Argo Workflows
-argoworkflows:
- - name: About
-   link: /infrastructure/argoworkflows/about
-   icon: "bi bi-grid"
- - name: Installation
-   link: "#"
-   icon: "bi bi-grid"
-   submenu:
-     - name: Local Installation
-       link: "#"
-       icon: "bi bi-grid"
-       submenu:
-         - name: Pre-Installation
-           link: /infrastructure/argoworkflows/preinstall-local
-           icon: "bi bi-menu-button-wide"
-         - name: Installation
-           link: /infrastructure/argoworkflows/install-local
-           icon: "bi bi-menu-button-wide"
-     - name: GKE Installation
-       link: "#"
-       icon: "bi bi-grid"
-       submenu:
-         - name: Pre-Installation
-           link: /infrastructure/argoworkflows/preinstall-gke
-           icon: "bi bi-menu-button-wide"
-         - name: Installation
-           link: /infrastructure/argoworkflows/install-gke
-           icon: "bi bi-menu-button-wide"
+---
+ai_product_1:
+- id: 1
+  http: "#"
+  title: "Install"
+  children:
+  - id: 2
+    http: "#"
+    title: "Local"
+    children:
+    - id: 3
+      http: "/ai/setup"
+      title: "Setup"
+      children: null
+    - id: 4
+      http: "/ai/configuration"
+      title: "Configuration"
+      children: null
 
