--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,3 +41,11 @@ jobs:
       - name: Build with Jekyll
         # Outputs to the './_site' directory by default
         run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
+      - name: Checkout Desitination Repository
+        uses: actions/checkout@v3
+        with:
+          repository: ys-ramkumar/gh-pages-publish
+          path: publish-pages
+      - name: Move Build Files to Publish Pages Directory
+        run: cp -rf _site/* publish-pages && ls publish-pages
+      
