--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,5 +47,12 @@ jobs:
           repository: ys-ramkumar/gh-pages-publish
           path: publish-pages
       - name: Move Build Files to Publish Pages Directory
-        run: cp -rf _site/* publish-pages && ls publish-pages
+        run: cp -rf _site/* publish-pages && ls publish-pages     
+      - name: Add & Commit to Publish Pages Repository
+        uses: EndBug/add-and-commit@v9.1.3
+        with:
+          cwd: publish-pages
+          fetch: true
+
+
       
