--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,12 +10,6 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
-permissions:
-  contents: write
-  id-token: write
-  repository-projects: write
-
 # Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
 # However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
 concurrency:
@@ -45,13 +39,12 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: ys-ramkumar/gh-pages-publish
-          path: publish-pages
+          path: ./publish-pages/
       - name: Move Build Files to Publish Pages Directory
         run: cp -rf _site/* publish-pages && ls publish-pages     
       - name: Add & Commit to Publish Pages Repository
         uses: EndBug/add-and-commit@v9.1.3
         with:
-          cwd: publish-pages
-
-
-      
+          cwd: ./publish-pages/
+          default_author: github_actor
+          author_email: R_kumar@acs.org      
