--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,7 +42,14 @@ jobs:
           path: ./publish-pages/
           token: ${{ secrets.WRITE_TOKEN }}
       - name: Move Build Files to Publish Pages Directory
-        run: cp -rf _site/* publish-pages && ls publish-pages     
+        run: cp -rf _site/* publish-pages && ls publish-pages
+      - name: Setup Java
+        uses: actions/setup-java@v3
+        with:
+          java-version: 8
+          distribution: 'temurin'
+      - name: Build Static Files War
+        run: jar -cvf deploy.war publish-pages/* && mv deploy.war publish-pages
       - name: Add & Commit to Publish Pages Repository
         uses: EndBug/add-and-commit@v9.1.3
         with:
